# tree-sitter-poe-filter

./: .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml
bindings/c/: tree-sitter-poe-filter.pc.in
bindings/c/tree_sitter/: tree-sitter-poe-filter.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_poe_filter/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPoEFilterTests/: TreeSitterPoEFilterTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: filter.txt
test/highlight/: test.filter
