[package]
name = "tree-sitter-poe-filter"
description = "poe-filter grammar for the tree-sitter parsing library"
version = "0.3.0"
keywords = ["incremental", "parsing", "poe-filter"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-poe-filter"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
